fixed overflow issue

--- a/card_memory_game/styles.css
+++ b/card_memory_game/styles.css
@@ -247,7 +247,6 @@ button.danger:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 12em;
     margin: auto;
 }
 
